--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,9 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
-# <django-project-name>/staticfiles/
+django_template/static/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
@@ -128,7 +127,7 @@ env.bak/
 venv.bak/
 pythonenv*
 .vscode
-static
+django_template/static/
 # Spyder project settings
 .spyderproject
 .spyproject
